# imu__setup

./: Cargo.toml  gyro_calib.txt  txt.txt
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
cube-viz/: Cargo.toml
cube-viz/src/: main.rs  state.rs  transforms.rs  vertex_data.rs
gy91/: Cargo.toml
gy91/src/: bits.rs  device.rs  lib.rs
gyro_pitch_error/: error.txt
gyro_roll_error/: error.txt
icm-20948/: Cargo.toml
icm-20948/src/: lib.rs  reg.rs
kalman/: Cargo.toml
kalman/src/: lib.rs
lowpass/: Cargo.toml
lowpass/src/: lib.rs
scripts/: madgwick.py  plotter.py
src/: ahrs.rs  kalman.rs  madgwick.rs  mahony.rs  main.rs
