[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32.workspace = true
embassy-sync.workspace = true

legacy-hal = { package = "embedded-hal", version = "0.2.6" }

embedded-hal = "1.0.0-alpha.9"
embedded-hal-async.workspace = true

thiserror-no-std = "2.0.2"
format_no_std = "1.0.0"